...
          ),

          const SizedBox(height: 32),

          // 模式标题
          const Text(
            '冥想模式',
            style: TextStyle(
              fontSize: 32,
              fontWeight: FontWeight.bold,
              color: Colors.white70,
            ),
          ),
...
